--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-chat",
   "productName": "electron-chat",
-  "version": "1.1.1",
+  "version": "1.1.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
@@ -19,7 +19,11 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "extraResource": [
+          "./src/copyfiles/"
+        ]
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
@@ -59,6 +63,9 @@
             }
           }
         ]
+      ],
+      "afterExtract:": [
+        "./src/copyfiles/copyfile-dll.js"
       ]
     }
   },
@@ -85,6 +92,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "copyfiles": "^2.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
